SET(LIBHELLO_SRC hello.cpp)
#这种方式静态库和动态库的名字不能一样
ADD_LIBRARY(hello SHARED ${LIBHELLO_SRC})
#生成libhello_static.a
ADD_LIBRARY(hello_static STATIC ${LIBHELLO_SRC})
#如果需要生成同样的前缀名，则如下：
SET_TARGET_PROPERTIES(hello_static PROPERTIES OUTPUT_NAME "hello")

#为了防止每次构建时删除同名的库，则添加如下：
SET_TARGET_PROPERTIES(hello PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(hello_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)

#添加库版本号,version为库版本，SOVERSION为API版本
SET_TARGET_PROPERTIES(hello PROPERTIES VERSION 1.2 SOVERSION 1)
SET_TARGET_PROPERTIES(hello_static PROPERTIES VERSION 1.2 SOVERSION 1)

